Avoid overflow on frontpage since topbar is now included

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -42,7 +42,7 @@
     }
   }
 
-  height: 85vh;
+  height: 82vh;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary, 0.8),
@@ -54,9 +54,9 @@
   position: relative;
 
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    height: 90vh;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 69vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 69vh, 0 100%);
+    height: 82vh;
   }
 
   &__logo-box {
